--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@lucascv/design",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
-  "main": "lib/main.js",
-  "module": "lib/main.js",
-  "types": "lib/main.d.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -77,18 +77,20 @@
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "cssnano": "^5.1.14",
     "json": "^11.0.0",
     "less": "^4.1.3",
     "postcss": "^8.4.19",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.3.0",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-uglify": "^6.0.4",
-    "webpack": "^5.75.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "webpack": "^5.75.0"
   }
 }
